--- a/ua-quickstart/package.json
+++ b/ua-quickstart/package.json
@@ -8,21 +8,46 @@
     "start": "next start",
     "lint": "next lint"
   },
-  "dependencies": {
-    "@particle-network/connectkit": "^2.0.15",
-    "next": "14.2.5",
-    "react": "^18",
-    "react-dom": "^18",
-    "viem": "^2"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
-  }
+"dependencies": {
+  "@particle-network/connectkit": "^2.0.15",
+  "next": "14.2.5",
+  "react": "^18",
+  "react-dom": "^18",
+  "viem": "^2.24.3",
+  "@coral-xyz/anchor": "^0.30.1",
+  "@noble/hashes": "^1.7.1",
+  "@solana/spl-token": "^0.4.9",
+  "@solana/web3.js": "^1.98.0",
+  "axios": "^1.8.4",
+  "borsh": "^2.0.0",
+  "fast-json-stable-stringify": "^2.1.0",
+  "merkletreejs": "^0.5.1",
+  "ts-enum-util": "^4.1.0",
+  "uuid": "^11.1.0"
+},
+"devDependencies": {
+  "@types/node": "^22.14.0",
+  "@types/react": "^18",
+  "@types/react-dom": "^18",
+  "eslint": "^8",
+  "eslint-config-next": "14.2.5",
+  "postcss": "^8",
+  "tailwindcss": "^3.4.1",
+  "typescript": "^5.8.3",
+  "@ethersproject/bytes": "^5.8.0",
+  "@rollup/plugin-terser": "^0.4.4",
+  "@types/crypto-js": "^4.2.2",
+  "@types/jest": "^29.5.12",
+  "dotenv": "^16.0.1",
+  "ethers": "^6.13.5",
+  "javascript-obfuscator": "^4.1.1",
+  "jest": "^29.7.0",
+  "rimraf": "^5.0.5",
+  "rollup": "^4.39.0",
+  "rollup-plugin-dts": "^6.2.1",
+  "rollup-plugin-obfuscator": "^1.1.0",
+  "rollup-plugin-typescript2": "^0.35.0",
+  "ts-jest": "^29.1.2",
+  "ts-node": "^10.9.2"
+}
 }
