--- a/ua-quickstart/tsconfig.json
+++ b/ua-quickstart/tsconfig.json
@@ -17,9 +17,10 @@
         "name": "next"
       }
     ],
-    "paths": {
-      "@/*": ["./*"]
-    }
+"paths": {
+  "@/*": ["./src/*"],
+  "@GDdark/universal-account": ["./node_modules/@GDdark/universal-account/dist/index.d.ts"]
+}
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
